--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.achmad.madeacademy.dicodingmadeclass"
+        applicationId "com.achmad.madeacademy.myreadwriteFile"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
