Change package name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.achmad.madeacademy.dicodingmadeclass">
+    package="com.achmad.madeacademy.mynotesapp">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NoteAddUpdateActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.achmad.madeacademy.mynotesapp.NoteAddUpdateActivity"></activity>
+        <activity android:name="com.achmad.madeacademy.mynotesapp.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
