--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.achmad.madeacademy.dicodingmadeclass"
+        applicationId "com.achmad.madeacademy.mynotesapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
