--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.achmad.madeacademy.mynotesapp">
+    <permission android:name="com.achmad.madeacademy.mynotesapp.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission android:name="com.achmad.madeacademy.mynotesapp.WRITE_DATABASE" android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
@@ -9,8 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.achmad.madeacademy.mynotesapp.NoteAddUpdateActivity"></activity>
-        <activity android:name="com.achmad.madeacademy.mynotesapp.MainActivity">
+        <provider
+            android:name=".provider.MyContentProvider"
+            android:authorities="com.achmad.madeacademy.mynotesapp"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.achmad.madeacademy.mynotesapp.READ_DATABASE"
+            android:writePermission="com.achmad.madeacademy.mynotesapp.WRITE_DATABASE"></provider>
+
+        <activity android:name=".NoteAddUpdateActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
