--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.achmad.madeacademy.dicodingmadeclass">
+    package="com.achmad.madeacademy.bulkinsertsqlite">
 
     <application
         android:allowBackup="true"
@@ -10,12 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".DataManagerService"
+            android:name="com.achmad.madeacademy.bulkinsertsqlite.DataManagerService"
             android:enabled="true"
             android:exported="true"></service>
 
-        <activity android:name=".MahasiswaActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.achmad.madeacademy.bulkinsertsqlite.MahasiswaActivity" />
+        <activity android:name="com.achmad.madeacademy.bulkinsertsqlite.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
